--- a/YNK_front/project/page/component/cart2/cart2.wxss
+++ b/YNK_front/project/page/component/cart2/cart2.wxss
@@ -291,3 +291,10 @@ button::after {
     height:60rpx;
     z-index: 100;
 }
+
+.bottom{
+    height: 60rpx;
+    /* background-color: #f5f5f5; */
+    color:gray;
+    text-align: center;
+}
