--- a/YNK_front/project/page/component/cart4/cart4.wxss
+++ b/YNK_front/project/page/component/cart4/cart4.wxss
@@ -61,6 +61,7 @@
     float: right;
     width: 170rpx;
     height: 60rpx;
+    margin-left: 20rpx;
     line-height:60rpx;
     border-radius: 6rpx;
     background: #b42f2d;
