--- a/YNK_front/project/page/component/category/category.wxml
+++ b/YNK_front/project/page/component/category/category.wxml
@@ -1,7 +1,7 @@
 <view class="page">
     <view class="page-bottom">
         <view class="page-content">
-            <view wx:for="{{category}}" class="wc {{index==curIndex?'wc-on':'' }}" data-index="{{item.id}}" bindtap="switchTab" wx:key="key">
+            <view wx:for="{{category}}" class="wc {{index+1==curIndex?'wc-on':'' }}" data-index="{{item.id}}" bindtap="switchTab" wx:key="key">
                 <text>{{item.name}}</text>
             </view>
         </view>
@@ -11,13 +11,13 @@
             <icon class="iconfont icon-zhankai" bindtap="tap_ch"></icon>
         </view>
         <scroll-view class="categroy-right" scroll-y scroll-with-animation="true">
-            <view wx:for="{{detail}}" wx-if="{{index==curIndex}}" wx:for-index wx:key="idx">
+            <view wx:for="{{detail}}" wx-if="{{index+1==curIndex}}" wx:for-index wx:key="idx">
                 <view data-index="{{index}}" class="cate-box">
                     <view class="cate-banner">
-                        <image src="http://schoolbuy.online:70/static/Poster/poster2.png" mode="aspectFill"></image>
+                        <image src="http://schoolbuy.online:70/static/Poster/poster1.jpg" mode="aspectFill"></image>
                     </view>
                     <view class="cate-title">
-                        <text>{{category[curIndex].name}}</text>
+                        <text>{{category[curIndex-1].name}}</text>
                     </view>
                     <view class="product">
                         <view class="product-list" wx:for="{{detail[index]}}" wx:key="index" wx:for-item="val">
