--- a/YNK_front/project/page/component/list/list.wxml
+++ b/YNK_front/project/page/component/list/list.wxml
@@ -2,15 +2,15 @@
     <scroll-view class="categroy-right" scroll-y scroll-with-animation="true">
         <view class="cate-box">
             <view class="cate-banner">
-                <image src="http://schoolbuy.online:70/static/Poster/poster2.png" mode="aspectFill"></image>
+                <image src="http://schoolbuy.online:70/static/Poster/poster2.jpg" mode="aspectFill"></image>
             </view>
             <view class="cate-title">
                 <text>{{cate}}</text>
             </view>
             <view class="product">
                 <view class="product-list" wx:for="{{detail}}" wx:key="index" wx:for-item="val">
-                    <navigator url="../details/details?good_id={{val.good_id}}">
-                        <image src="{{val.gphoto}}" mode="aspectFill"></image>
+                    <navigator url="../details/details?good_id={{val.ID}}">
+                        <image src="{{val.Gphoto}}" mode="aspectFill"></image>
                         <view class="classname">{{val.name}}</view>
                     </navigator>
                 </view>
