--- a/YNK_front/project/page/component/chat/chat.wxml
+++ b/YNK_front/project/page/component/chat/chat.wxml
@@ -1,11 +1,12 @@
 <!-- <button bind:tap="closeSocket">close socket</button> -->
+<wxs module="beautify" src="../../../util/beautify.wxs" />
 
 
 <scroll-view upper-threshold="100" scroll-into-view="{{toView}}" scroll-top="{{scrollTop}}" scroll-y="true" focus="{{mode}}" enable-back-to-top="true" style="height: {{scroll_height}}px;" class="message-list">
 	<!-- 每一行 -->
 	<view class="row" wx:for="{{message_list}}" wx:key="" id="row_{{index}}">
 		<!-- 日期 -->
-		<view class="datetime" wx:if="{{item.create_time != ''}}">{{item.create_time}}</view>
+		<view class="datetime" wx:if="{{item.create_time != ''}}">{{beautify.beautify_time(item.create_time)}}</view>
 		<!-- 头像与内容文本 -->
 		<view class="body" style="flex-flow: {{item.myself == 0 ? 'row' : 'row-reverse'}}">
 			<view class="avatar-container">
@@ -28,7 +29,7 @@
 	</view>
 </view>
 <view class="reply">
-	<image src="./images/{{mode ? 'voice' : 'text'}}.png" class="voice-image" bindtap="switchMode" />
+	<!-- <image src="./images/{{mode ? 'voice' : 'text'}}.png" class="voice-image" bindtap="switchMode" /> -->
 	<view class="opration-area">
 		<input wx:if="{{mode}}" type="text" confirm-type="send" bindconfirm="reply" value="{{content}}" />
 		<button class="voice-button" bindlongtap="record" bindtouchstart="touchStart" bindtouchmove="touchMove" bindtouchend="touchEnd" wx:else>{{tips[status]}}</button>
