--- a/YNK_front/project/page/component/cart3/cart3.wxml
+++ b/YNK_front/project/page/component/cart3/cart3.wxml
@@ -11,8 +11,8 @@
         </view>
         <view class="orders-footer">
             <view class="orders-buymsg" hover-class="none" hover-stop-propagation="false">
-                <text class="" selectable="true">买家电话：{{item.address}}</text>
-                <text class="" selectable="true">{{item.telephone}}</text>
+                <text class="" selectable="true">买家电话：{{item.telephone}}</text>
+                <text class="" selectable="true">{{item.address}}</text>
             </view>
             <!-- <text>实付：￥{{item.money}}</text> -->
             <!-- <button size="mini" class="orders-btn" bindtap="delOrders">删除</button> -->
