--- a/YNK_front/project/page/component/index.wxml
+++ b/YNK_front/project/page/component/index.wxml
@@ -23,7 +23,7 @@
             <text>热度TOP5</text>
         </view>
         <scroll-view class="rank-box" scroll-x="{{true}}" scroll-y="{{false}}">
-            <navigator wx:for="{{good_list}}" wx:key="index" data-goodid="{{item.good_id}}" url="details/details?good_id={{item.good_id}}" class="good-box rank-item">
+            <navigator wx:for="{{good_list}}" wx:if="{{index<5}}" wx:key="index" data-goodid="{{item.good_id}}" url="details/details?good_id={{item.good_id}}" class="good-box rank-item">
                 <image class="good-gphoto" src="{{item.gphoto}}" mode="aspectFill" lazy-load="true" />
                 <view class="good-name1">{{item.name}}</view>
             </navigator>
@@ -33,16 +33,19 @@
         <view class='menu'>
             <view class='menu-list'>
                 <view class='menu-nav {{ortherBy==0?"menu-nav-on":""}} ' data-index="0" bindtap="menuClick">
-                    <text class='menu-text'>综合排序</text>
+                    <text class='menu-text'>综合排序 </text>
+
                 </view>
-                <!-- <view class='menu-nav {{ortherBy==1?"menu-nav-on":""}}' data-index="1" bindtap="menuClick">
+                <view class='menu-nav {{ortherBy==1?"menu-nav-on":""}}' data-index="1" bindtap="menuClick">
+                    <text class='menu-text'>毕业季·专场 </text>
+                              <icon class='iconfont icon-biye'></icon>
+
+                </view>
+                <!-- <view class='menu-nav {{ortherBy==2?"menu-nav-on":""}}' data-index="2" bindtap="menuClick">
+                    <text class='menu-text'>推荐</text>
+                </view>
+                <view class='menu-nav {{ortherBy==3?"menu-nav-on":""}}' data-index="3" bindtap="menuClick">
                     <text class='menu-text'>附近</text>
-                </view> -->
-                <view class='menu-nav {{ortherBy==2?"menu-nav-on":""}}' data-index="2" bindtap="menuClick">
-                    <text class='menu-text'>热度</text>
-                </view>
-                <!-- <view class='menu-nav {{ortherBy==3?"menu-nav-on":""}}' data-index="3" bindtap="menuClick">
-                    <text class='menu-text'>筛选</text>
                 </view> -->
             </view>
         </view>
@@ -52,7 +55,7 @@
             <text>最近新品</text>
         </view> -->
         <view class="newgood-box">
-            <view class="newgood-list" wx:for="{{good_list}}" wx:key="key">
+            <view class="newgood-list" wx:for="{{ ortherBy==0?good_list:active_gd_good_list}}" wx:key="key">
                 <navigator data-goodid="{{}}" class="nav" url="details/details?good_id={{item.good_id}}" hover-class="navigator-hover">
                     <view class="nav-left" hover-class="none" hover-stop-propagation="false">
                         <image mode='aspectFill' src="{{item.gphoto}}"></image>
@@ -81,7 +84,8 @@
                             </view> -->
                             <icon class="iconfont     icon-yirenzheng2"></icon>
                             <view class="newgood-text-name">
-                                <text>| {{item.user_name}}</text>
+                                <!-- <text>| {{item.user_name}}</text> -->
+                                {{item.user_name}}
                             </view>
                             <view class="newgood-text-time" data-time='{{item.pub_time}}'>
                                 <text>{{beautify.beautify_time(item.pub_time)}}发布</text>
