--- a/YNK_front/project/page/component/publish/publish.wxml
+++ b/YNK_front/project/page/component/publish/publish.wxml
@@ -21,22 +21,12 @@
       </block>
       <view class="image-opera image-wrap" hover-class="none" hover-stop-propagation="false">
         <button class="add-img" type="default" size="mini" bindtap="chooseImage" wx:if="{{images.length < 9}}">
-          <image src="/image/addimg2.png"  mode="scaleToFill" ></image>
+          <image src="/image/addimg2.png" mode="scaleToFill"></image>
         </button>
       </view>
     </view>
     <view class="div-line"></view>
     <view class="category">
-      <!-- <view  bindtap="toggle">
-        <button class='category-btn'>
-          <view class="category-btn-left"><text>{{accountName}}</text></view>
-          <view class="category-btn-right"><text class="text-placeholder">分类</text><icon class='iconfont icon-right'></icon></view>
-          
-        </button>
-      </view> -->
-      <!-- 组件:下拉弹出框 -->
-      <!-- <template-dialog id="dialog" account="{{account}}" accountName="{{accountName}}" bind:action="switchAccount"></template-dialog> -->
-      <!-- 自定义的下拉弹出框有卡顿，先用picker组件 -->
       <picker bindchange="bindPickerChange" value="{{index}}" range="{{category}}">
         <button class="picker category-btn">
           <view class="category-btn-left">
@@ -50,7 +40,7 @@
       </picker>
     </view>
     <view class="div-line"></view>
-    <view class="price" hover-class="none" hover-stop-propagation="false">
+    <view class="price " hover-class="none" hover-stop-propagation="false">
       <view class="price-btn-left">
         <input type="number" data-name="price" bindinput="priceEdit" value="{{price}}"></input>
       </view>
@@ -59,16 +49,21 @@
         <icon class='iconfont icon-rmb'></icon>
       </view>
     </view>
+    <view class="div-line"></view>
+    <view class="festival-gd" hover-class="none" hover-stop-propagation="false">
+      <view class="festival-btn-left">
+        <switch bindchange="gdChange" />
+      </view>
+      <view class="festival-btn-right">
+        <text class="text-placeholder">毕业季·专场 </text>
+          <icon class='iconfont icon-biye'></icon>
+      </view>
+    </view>
   </view>
   <view class="submit">
     <button class="submit-btn" bindtap="submitForm">
-      <text class="" selectable="false" space="false" decode="false">
-              发布
-
-      </text>
-        
-      <image class="" src="/image/paper-plane.png" mode="widthFix"/>
-        
+      <text class="" selectable="false" space="false" decode="false">发布</text>
+      <image class="" src="/image/paper-plane.png" mode="widthFix" />
       <!-- <icon class="iconfont icon-paper-plane"></icon> -->
     </button>
   </view>
