--- a/YNK_front/project/page/component/user/user.wxss
+++ b/YNK_front/project/page/component/user/user.wxss
@@ -141,10 +141,10 @@ button::after{border:0}
     width: 50rpx;
     height: 50rpx;
 }
-.address-box>view::after{
+.address-box>navigator::after{
     position: absolute;
     right: 30rpx;
-    top: 34rpx;
+    top: 35rpx;
     content: '';
     width: 16rpx;
     height: 16rpx;
